# GameBloat

./: .gitignore  CMakeLists.txt  CurrentIssue.txt  Desktop  GB_Emulator_C.code-workspace  LICENSE  Makefile  README.md  cpu.c  cpu.h  cpuCommands.c  dev_work_log.txt  emulator  main.c  memoryManager.c  memoryManager.h  opcodeTable.c  opcodeTable.h  registers.c  registers.h
Aurelia_Test/: package-lock.json
Aurelia_Test/Emulator_Frontend/: .eslintrc.json  README.md  Todos.txt  aurelia_notes.txt  package-lock.json  package.json  webpack.config.js
Aurelia_Test/Emulator_Frontend/aurelia_project/: aurelia.json
Aurelia_Test/Emulator_Frontend/src/: app.html  app.js  reconnecting-websocket.js
Aurelia_Test/Emulator_Frontend/src/components/: gameboy-canvas.js
Documentation/: Useful-Links.txt
GTKTesting/: GTKNotes.txt  draw_pixels.c  example-0.c  example-2.c  example-3.c  statusbar.c  timer.c
Testing/: CMakeLists.txt
Testing/Cinoop/include/: cin_cpu.h  cin_gpu.h  cin_registers.h  interrupts.h  keys.h  rom.h
Testing/Cinoop/source/: cb.c  cin_cpu.c  cin_gpu.c  cin_memory.c  cin_registers.c  debug.c  display.c  interrupts.c  rom.c
include/: MBC.h  bios.h  cartridge.h  cgb.h  cpu.h  gpu.h  interrupt.h  logger.h  memory.h  opcode.h  registers.h  utils.h
include/MBC/: MBC1.h  MBC2.h  MBC3.h  MBC4.h  MBC5.h  MBCNone.h
libs/wsServer/: .gitignore  CMakeLists.txt
src/: BaseOpcodeTable.c  CBOpcodeTable.c  MBC.c  bios.c  cartridge.c  cgb.c  cpu.c  gpu.c  interrupt.c  logger.c  main.c  memory.c  registers.c
src/Helpers/: logger.h
src/MBC/: MBC1.c  MBC2.c  MBC3.c  MBC4.c  MBC5.c  MBCNone.c
temp/: main.c
tests/: main.c
